--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase2
+spring.datasource.url=jdbc:mysql://34.172.86.187:3306/db-student
 spring.datasource.username=root
-spring.datasource.password=Hoaithanh10b1!
+spring.datasource.password=123654
 spring.jpa.hibernate.ddl-auto=update
 file.upload-dir=src/main/resources/static/uploads
 spring.servlet.multipart.max-file-size=5MB
